fixed text wrapping issue in the sidebar

--- a/button11/style.css
+++ b/button11/style.css
@@ -41,6 +41,7 @@ body {
   align-self: start;
   transition: 300ms ease-in-out;
   overflow: hidden;
+  text-wrap: nowrap;
 }
 
 #sidebar.close {
